# BZV-SINAIS

./: .gitignore  README.md  api_betfair.py  compose.yml  dockerfile  entradas.py  helper_browser.py  helper_sql.py  helper_telegram.py  pyproject.toml  requeriments.txt  requirements.txt  routine.py  start_entradas.bat  start_entradas.vbs  start_sinais.bat  start_sinais.vbs  step1.py  step2.py  step3.py  sync_db.py
